--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -202,7 +202,7 @@
 
 \title{PSYC6060 Course Notes}
 \author{David J. Stanley}
-\date{2020-07-01}
+\date{2020-07-02}
 
 \begin{document}
 \maketitle
@@ -311,22 +311,21 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 ##   rematch_1.0.1       repr_1.1.0         
 ##   reprex_0.3.0        rlang_0.4.6        
 ##   rmarkdown_2.2       rpart_4.1-15       
-##   rprojroot_1.3.2     rsconnect_0.8.16   
-##   rstudioapi_0.11     rvest_0.3.5        
-##   scales_1.1.1        selectr_0.4.2      
-##   skimr_2.1.1         snakecase_0.11.0   
-##   splines_4.0.1       stats_4.0.1        
-##   stringi_1.4.6       stringr_1.4.0      
-##   survival_3.1-12     sys_3.3            
-##   testthat_2.3.2      tibble_3.0.1       
-##   tidyr_1.1.0         tidyselect_1.1.0   
-##   tidyverse_1.3.0     tinytex_0.23       
-##   tools_4.0.1         utf8_1.1.4         
-##   utils_4.0.1         vctrs_0.3.0        
-##   viridis_0.5.1       viridisLite_0.3.0  
-##   whisker_0.4         withr_2.2.0        
-##   xfun_0.14           xml2_1.3.2         
-##   yaml_2.2.1
+##   rprojroot_1.3.2     rstudioapi_0.11    
+##   rvest_0.3.5         scales_1.1.1       
+##   selectr_0.4.2       skimr_2.1.1        
+##   snakecase_0.11.0    splines_4.0.1      
+##   stats_4.0.1         stringi_1.4.6      
+##   stringr_1.4.0       survival_3.1-12    
+##   sys_3.3             testthat_2.3.2     
+##   tibble_3.0.1        tidyr_1.1.0        
+##   tidyselect_1.1.0    tidyverse_1.3.0    
+##   tinytex_0.23        tools_4.0.1        
+##   utf8_1.1.4          utils_4.0.1        
+##   vctrs_0.3.0         viridis_0.5.1      
+##   viridisLite_0.3.0   whisker_0.4        
+##   withr_2.2.0         xfun_0.14          
+##   xml2_1.3.2          yaml_2.2.1
 \end{verbatim}
 
 Package names are in bold text (e.g., \textbf{rmarkdown}), and inline code and filenames are formatted in a typewriter font (e.g., \texttt{knitr::knit(\textquotesingle{}foo.Rmd\textquotesingle{})}). Function names are followed by parentheses (e.g., \texttt{bookdown::render\_book()}).
@@ -1122,15 +1121,17 @@ data\_experiment.csv\tabularnewline
 \hypertarget{objective}{%
 \section{Objective}\label{objective}}
 
-The objective of this chapter is to familiarize you with some key commands in the tidyverse. The many commands are used in isolation of each other. In the next chapter we will use the commands in a more coordinated way as we load a data and move it from raw data to data that is ready for analysis (i.e., analytic data). You can start this project by Starting the class assignment on R Studio Cloud that corresponds to the chapter name.
+The objective of this chapter is to familiarize you with some key commands in the tidyverse. These commands are used in isolation of each other for the most part. In the next chapter we will use these commands in a more coordinated way as we load a data set and move it from raw data to data that is ready for analysis (i.e., analytic data). You can start this project by Starting the class assignment on R Studio Cloud that corresponds to the chapter name.
 
 \hypertarget{using-the-console}{%
 \section{Using the Console}\label{using-the-console}}
 
-All of the commands in this chapter should be typed into the Console within R. If you see a command split over multiple lines, use SHIFT-RETURN or SHIFT-ENTER to move the next line that is part of the same command.
+All of the commands in this chapter should be typed into the Console within R. If you see a command split over multiple lines, use SHIFT-RETURN (macOS) or SHIFT-ENTER (Windows) to move the next line that is part of the same command.
 
 \hypertarget{basic-tidyverse-commands}{%
 \section{Basic tidyverse commands}\label{basic-tidyverse-commands}}
+
+If you inspect the Files tab on the lower-right panel in R Studio you will see the file data\_okcupid.csv. The code below loads that file.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -1139,7 +1140,7 @@ All of the commands in this chapter should be typed into the Console within R. I
 \end{Highlighting}
 \end{Shaded}
 
-You can see the first few rows of the data using the print() command:
+You can see the first few rows of the data using the print() command. Each row presents a person whereas each column represents a variable. If you have a large number of columns you will only see the first several columns with this approach to viewing your data.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -1183,14 +1184,17 @@ But it's also helpful just to see a list of the columns in the data with the gli
 ## $ status <chr> "single", "single", "available", "single...
 \end{verbatim}
 
+The glimpse() command is useful but is quickly allows you to see all of the columns. Moreover, it allows you to see the type for each column. Types were briefly discussed in the last chapter. Notice in the output beside each column name some columns are labeled which is short for double -- a type of numeric column. Other columns columns are labeled which is short for character - meaning the columns contain characters. These designations will become important in the next chapter as we prepare data for analysis.
+
 \hypertarget{select}{%
 \subsection{select()}\label{select}}
 
-The select() command allows you to obtain a subset of the columns in your data. The commands below can be used to obtain the age and height columns. You can read the command as: take the okcupid\_profiles data and then select the age and height columns. You can see that this prints out the data with just the age and height columns.
+The select() command allows you to obtain a subset of the columns in your data. The commands below can be used to obtain the age and height columns. You can read the command as: take the okcupid\_profiles data and then select the age and height columns. The ``\%\textgreater\%'' symbol can be read as ``and then''. You can see that this code prints out the data with just the age and height columns. Remember, use SHIFT-ENTER or SHIFT-RETURN to move he next line in the block of code.
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{okcupid_profiles }\OperatorTok{%>%}\StringTok{ }\KeywordTok{select}\NormalTok{(age, height)}
+\NormalTok{okcupid_profiles }\OperatorTok{%>%}\StringTok{ }
+\StringTok{  }\KeywordTok{select}\NormalTok{(age, height)}
 \end{Highlighting}
 \end{Shaded}
 
@@ -1215,7 +1219,8 @@ Of course, it's usually of little help to just print the subset of the data. It'
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{new_data <-}\StringTok{ }\NormalTok{okcupid_profiles }\OperatorTok{%>%}\StringTok{ }\KeywordTok{select}\NormalTok{(age, height)}
+\NormalTok{new_data <-}\StringTok{ }\NormalTok{okcupid_profiles }\OperatorTok{%>%}\StringTok{ }
+\StringTok{  }\KeywordTok{select}\NormalTok{(age, height)}
 \end{Highlighting}
 \end{Shaded}
 
@@ -1264,7 +1269,7 @@ The glimpse() command shows us that we kept all the columns except the age and h
 
 The summarise() command can be used to generate descriptive statistics for a specified column. You can easily calculate column descriptive statistics using the corresponding commands for mean(), sd(), min(), max(), among others. In the example below we calculate the mean for the age column.
 
-In code below mean(age, na.rm = TRUE) indicates that to R that it should calculate the mean of the age column. The na.rm indicates how missing values should be handled. The na stands for not available; in R missing values are classified as Not Available or NA. The rm stands for remove. Consequently, na.rm is asking should we remove missing values when calculating the mean. The TRUE indicates that yes, missing values should be removed when calculating the mean. The result of this calculation is placed into a variable labelled age\_mean, though we could have used any label we wanted instead of age\_mean. We see that the mean of the age column is, with rounding, 32.3.
+In code below mean(age, na.rm = TRUE) indicates to R that it should calculate the mean of the age column. The na.rm indicates how missing values should be handled. The na stands for not available; in R missing values are classified as Not Available or NA. The rm stands for remove. Consequently, na.rm is asking: ``Should we remove missing values when calculating the mean?'' The TRUE indicates that yes, missing values should be removed when calculating the mean. The result of this calculation is placed into a variable labelled age\_mean, though we could have used any label we wanted instead of age\_mean. We see that the mean of the age column is, with rounding, 32.3.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -1321,7 +1326,7 @@ Notice the structure of the original data below in the glimpse() output. There i
 ## $ status <chr> "single", "single", "available", "single...
 \end{verbatim}
 
-We use the the filter command to select a subset of the rows based on the contents of any column. In this case the sex column. Notice the use of the the double equals sign to indicate ``equal to''. The reason a double equals sign is used here (instead of a single equals sign) it to distinguish it from the use of the single equals sign in the summarise command above. In the summarise command above, the single equal sign was used to indicate ``assign to''. That is assign to age\_mean the mean after it is calculated calculated. Single equals sign indicates ``assign to'' whereas a double equals sign indicates ``is equal to''.
+We use the the filter command to select a subset of the rows based on the contents of any column. In this case the sex column. Notice the double equals sign is used to indicate ``equal to''. The reason a double equals sign is used here (instead of a single equals sign) is to distinguish it from the use of the single equals sign in the summarise command above. In the summarise command above, the single equal sign was used to indicate ``assign to''. That is assign to age\_mean the mean of the column age after it is calculated calculated. A single equals sign indicates ``assign to'' whereas a double equals sign indicates ``is equal to''.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -1330,7 +1335,7 @@ We use the the filter command to select a subset of the rows based on the conten
 \end{Highlighting}
 \end{Shaded}
 
-We use glimpse() to inspect this all male data. Notice that only the letter m is in the sex column. Also notice that there are 35829 rows in the okcupid\_males data; fewer people because only the males are in this data.
+We use glimpse() to inspect these all male data. Notice that only the letter m is in the sex column - indicating only males are in the data set. Also notice that there are 35829 rows in the okcupid\_males data; fewer people because males are a subset of the total number of rows.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -1349,7 +1354,7 @@ We use glimpse() to inspect this all male data. Notice that only the letter m is
 ## $ status <chr> "single", "single", "available", "single...
 \end{verbatim}
 
-The filter command can be commbined with the summarise command to get the descriptive statistics for males without the hassle of creating a new data. This is done using the \%\textgreater\% ``and then'' operator.
+The filter command can be commbined with the summarise command to get the descriptive statistics for males without the hassle of creating a new data. This is again done using the \%\textgreater\% ``and then'' operator.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -1484,7 +1489,7 @@ Notice that the glimpse() command reveals that after we use the mutate() command
 \hypertarget{advanced-tidyverse-commands}{%
 \section{Advanced tidyverse commands}\label{advanced-tidyverse-commands}}
 
-In this advanced selection we will revisit the commands from the basic tidyverse section but use more complicated code to either select or apply an action to more than one column at a time. We will indicate the columns that we want to select or apply an action to using: starts\_with(), ends\_with(), contains(), matches(), or where(). The first four of these are used to indicate columns based on column names. In contrast, the last command, where(), i sued to indicate the columns we want base on the column type (numeric, character, factor, etc.). You can learn more about each of these commands by simply typing into the console a question mark followed by the function name (e.g., ?where) and then pressing return/enter. This will provide the help page for that function in Help tab in the lower right of R Studio. Note that you must have first activiated the tidyverse via library command for the help file to be accessible.
+In this advanced selection we revisit the commands from the basic tidyverse section but use more complicated code to either select or apply an action to more than one column at a time. We will indicate the columns that we want to select or apply an action to using: starts\_with(), ends\_with(), contains(), matches(), or where(). The first four of these are used to indicate columns based on column names. In contrast, the last command, where(), is used to indicate the columns based on the column type (numeric, character, factor, etc.).
 
 We will review all five commands for indicating the columns we want in the select() selection below. Following that we will, for brevity, typically use only one of the five commands when illustrating how they work with summarise() and mutate().
 
@@ -1647,7 +1652,7 @@ You can learn about regex at \href{https://regexone.com}{RegexOne} and test your
 \hypertarget{select-using-column-type}{%
 \subsubsection{select() using column type}\label{select-using-column-type}}
 
-If many cases we will want to select or perform on action on a column based on whether the column is a numeric, character, or factor column (indicated in glimpse output as dbl, chr, and fct, respectively). We will learn more about factors in a subsequent chapter. Each of these column types can be selected by using is.numeric, is.character, or is.factor, respectively, in combination with the where() command.
+If many cases we will want to select or perform on action on a column based on whether the column is a numeric, character, or factor column (indicated in glimpse output as dbl, chr, and fct, respectively). We will learn more about factors later in this chapter. Each of these column types can be selected by using is.numeric, is.character, or is.factor, respectively, in combination with the where() command.
 
 We can select numeric columns using where() and is.numeric:
 
@@ -1814,7 +1819,7 @@ The mutate command can also be applied to multiple columns using the across() co
 \end{Highlighting}
 \end{Shaded}
 
-The glimpse() command shows us all the column names. Also notice the values in the agresssion columns.s
+The glimpse() command shows us all the column names. Also notice the values in the agresssion columns are integers.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -1867,16 +1872,16 @@ Note that in the across command above we could also have used: starts\_with(), c
 \hypertarget{mutate-across-rows}{%
 \subsubsection{mutate() across rows}\label{mutate-across-rows}}
 
-Researchers often want to average within rows and across columns to create a new column. That is for each participant (i.e., rat in the current data) we might want to calculate an vomit rating that is the average of the two time points (that we will call vomit\_avg).
+Researchers often want to average within rows and across columns to create a new column. That is for each participant (i.e., rat in the current data) we might want to calculate a vomit score that is the average of the two time points (that we will call vomit\_avg).
 
-To average within rows (and across columns) we use the rowwise() command to inform R of our intent. After we do the necessary calculations though we have to shut off the rowwise() calculation state by using the ungroup() command. As well, when we are averaging within rows we have to use c\_across() instead of across(). The command below creates a new column called vomit\_avg which the average of the vomit ratings across both times. As before, we also include na.rm = TRUE so the computer drops missing values (if present) when calculating the mean.
+To average within rows (and across columns) we use the rowwise() command to inform R of our intent. After we do the necessary calculations though we have to shut off the rowwise() calculation state by using the ungroup() command. As well, when we are averaging within rows we have to use c\_across() instead of across(). The commands below creates a new column called vomit\_avg which the average of the vomit ratings across both times. As before, we also include na.rm = TRUE so the computer drops missing values (if present) when calculating the mean.
 
 \begin{Shaded}
 \begin{Highlighting}[]
 \NormalTok{data_exp <-}\StringTok{ }\NormalTok{data_exp }\OperatorTok{%>%}\StringTok{ }
 \StringTok{  }\KeywordTok{rowwise}\NormalTok{() }\OperatorTok{%>%}\StringTok{ }
 \StringTok{  }\KeywordTok{mutate}\NormalTok{(}\DataTypeTok{vomit_avg =} \KeywordTok{mean}\NormalTok{( }\KeywordTok{c_across}\NormalTok{(}\DataTypeTok{cols =} \KeywordTok{ends_with}\NormalTok{(}\StringTok{"vomit"}\NormalTok{)),}
-                               \DataTypeTok{na.rm =} \OtherTok{TRUE}\NormalTok{)) }\OperatorTok{%>%}
+                           \DataTypeTok{na.rm =} \OtherTok{TRUE}\NormalTok{)) }\OperatorTok{%>%}
 \StringTok{  }\KeywordTok{ungroup}\NormalTok{()}
 \end{Highlighting}
 \end{Shaded}
@@ -1901,7 +1906,7 @@ You can see the new column we created with the glimpse() command:
 ## $ vomit_avg     <dbl> 2.5, 1.5, 0.5, 2.5, 1.5, 1.5
 \end{verbatim}
 
-The print() command makes it easier to see the new column is the average of the other two.
+The print() command could make it easier to see the new column is the average of the other two, but if we used the command below it wouldn't work. Why? There are too many columns in the data set so only the first few columns are show.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -1909,20 +1914,7 @@ The print() command makes it easier to see the new column is the average of the 
 \end{Highlighting}
 \end{Shaded}
 
-\begin{verbatim}
-## # A tibble: 6 x 7
-##      id sex   t1_vomit t1_aggression t2_vomit t2_aggression
-##   <dbl> <chr>    <dbl>         <dbl>    <dbl>         <dbl>
-## 1     1 male         3          -0.5        2          -0.5
-## 2     2 fema~        2           0.5        1           0.5
-## 3     3 male         0          -1.5        1          -0.5
-## 4     4 fema~        3           1.5        2           0.5
-## 5     5 male         2          -2.5        1          -1.5
-## 6     6 fema~        1           2.5        2           1.5
-## # ... with 1 more variable: vomit_avg <dbl>
-\end{verbatim}
-
-We can make it even easier to see by combining tidyverse commands and using only the commands colums we are interested in:
+To see how the new column, vomit\_avg, is the average of the other vomit columns we use the select command before print(). This prints only the relvant columns. When this is done, it's easy to see how the values in the vomit\_avg column are the mean of the other two columns.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -1947,7 +1939,7 @@ We can make it even easier to see by combining tidyverse commands and using only
 \hypertarget{mutate-for-factors}{%
 \subsubsection{mutate() for factors}\label{mutate-for-factors}}
 
-In R it it is critical that you identify categorical variable as categorical variables. In R categorical variables are referred to as factors. A factor like sex has three possible levels: female, male, intersex.
+In R it it is critical that you identify categorical variable as categorical variables. In R categorical variables are referred to as factors. For humans, a factor like sex has three possible levels: female, male, intersex.
 
 An inspection of the glimpse() command output reveals that the sex column has the type character - as indicated by . Also notice as you inspect this output that we use words (e.g., female) to indicate the sex in the column rather than a number represent a female participant (e.g., 2). This is the preferred but less common approach to entering data.
 
@@ -1984,30 +1976,38 @@ You can confirm this worked with the glimpse() command:
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{data_exp <-}\StringTok{ }\NormalTok{data_exp }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{mutate}\NormalTok{(}\DataTypeTok{sex =} \KeywordTok{as_factor}\NormalTok{(sex))}
+\KeywordTok{glimpse}\NormalTok{(data_exp)}
 \end{Highlighting}
 \end{Shaded}
 
-If you entered your data using words (e.g., male, female) for the levels of sex you're done at this point. However, if you used numbers to represent each sex in your data there is one more step. You have to indicate to R which sex each number represents. We do that with the code below.
+\begin{verbatim}
+## Rows: 6
+## Columns: 7
+## $ id            <dbl> 1, 2, 3, 4, 5, 6
+## $ sex           <fct> male, female, male, female, male,...
+## $ t1_vomit      <dbl> 3, 2, 0, 3, 2, 1
+## $ t1_aggression <dbl> -0.5, 0.5, -1.5, 1.5, -2.5, 2.5
+## $ t2_vomit      <dbl> 2, 1, 1, 2, 1, 2
+## $ t2_aggression <dbl> -0.5, 0.5, -0.5, 0.5, -1.5, 1.5
+## $ vomit_avg     <dbl> 2.5, 1.5, 0.5, 2.5, 1.5, 1.5
+\end{verbatim}
+
+If you entered your data using words for each level of sex (e.g., male, female) you're done at this point. However, if you used numbers to represent each level of sex in your data there is one more step. Imagine your data was entered in a poorly advised manner, such that 1 was used to indicate male, 2 was used to indicate female, and 3 was used to indicate intersex. If this was the case, you need to indicate to R what each of those value represents. We do that with the code below.
 
 \begin{Shaded}
 \begin{Highlighting}[]
 \NormalTok{data_exp <-}\StringTok{ }\NormalTok{data_exp }\OperatorTok{%>%}
 \StringTok{  }\KeywordTok{mutate}\NormalTok{(}\DataTypeTok{sex =} \KeywordTok{fct_recode}\NormalTok{(sex,}
                           \DataTypeTok{male =} \StringTok{"1"}\NormalTok{,}
-                          \DataTypeTok{female =} \StringTok{"2"}\NormalTok{))}
+                          \DataTypeTok{female =} \StringTok{"2"}\NormalTok{,}
+                          \DataTypeTok{intersex =} \StringTok{"3"}\NormalTok{))}
 \end{Highlighting}
 \end{Shaded}
-
-\begin{verbatim}
-## Warning: Unknown levels in `f`: 1, 2
-\end{verbatim}
 
 \hypertarget{using-help}{%
 \section{Using help}\label{using-help}}
 
-In order to become an efficient at analyzing data using R, you will need to become adapt at reading and understanding the help files associated with each command. After you have activated a packages using the library command (e.g., library(tidyverse)) you can access the help page for every command in that package. To access the help page simply type a question mark followed by the command you want to know how to use (no space between them). The code below bring up the help page for the select() command. Notice I put the library() command first - just an reminder that this needs to be done to using help for that package. Try the commands below in the Console:
+In order to become an efficient at analyzing data using R, you will need to become adapt at reading and understanding the help files associated with each command. After you have activated a package using the library command (e.g., library(tidyverse)) you can access the help page for every command in that package. To access the help page simply type a question mark followed by the command you want to know how to use (no space between them). The code below bring up the help page for the select() command. Notice I put the library() command first - just an reminder that this needs to be done prior to using help for that package. Try the commands below in the Console:
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -2018,14 +2018,16 @@ In order to become an efficient at analyzing data using R, you will need to beco
 
 Examine the page that appears on the Help tab in the panel in the lower right of your screen. Read through the help file comparing what you read there to what we have learned about the select command. Notice how the help file tells you about the argument you send into the select() command and also what the select command returns when it receives those commands. Pay particular attention to the examples near the bottom of the help page. At the very bottom of the help page you will see {[}Package dplyr version 1.0.0 Index{]}. This tell you the select() command is from the dplyr package (part of the tidyverse). Notice that the word Index is underlined. Click on the word Index. You will be presented with list of other commands in the dplyr package.
 
-As you become more experienced with R help pages how you will learn to use new commands. Examine the help pages for the commands below:
+As you become more experienced with R help pages how you will learn to use new commands. Examine the help pages for the commands below by typing a question mark into the Console followed by the command name. Note that for filter and starts\_with you will be presented with a menu instead of help page. This typically occurs because the command is in more than one package. If this does occur, read through the options you are presented with to try and figure out which one you wanted Typically, you want the first option. If you're not sure, try one. It's it's not what you want use the back arrow in the Help panel to go back and pick another one.
 
 \begin{itemize}
 \tightlist
 \item
+  mutate
+\item
   filter
 \item
-  mutate
+  starts\_with
 \end{itemize}
 
 \hypertarget{base-r-vs-tidyverse}{%
@@ -2351,10 +2353,14 @@ Fortunately, the problems with Table \ref{tab:withinex} can be largely resolved 
 
 Why did we walk you through this technical treatment of structuring data within the computer at this point in time? So that you pay attention to the advice the follows. You can see at this point that you may well need to restructure your data for certain analyses. The ability to do so quickly and easily depends upon you following the advice in the rest of this chapter around the naming conventions for variables and other aspects of your analyses. You can imagine the challenges for converting the data in Figure \ref{tab:withinex} to the data in Figure \ref{tab:withintidyex} by hand. You want to be able to automate that process and others - which is made substantially easier if you following the forthcoming advice about naming conventions in the tidyverse.
 
-\hypertarget{data-collection-and-entry}{%
-\section{Data collection and entry}\label{data-collection-and-entry}}
+\hypertarget{data-collection-considerations}{%
+\section{Data collection considerations}\label{data-collection-considerations}}
 
-Data can be collected in a wide variety of way. Regardless of the methods of location researchers typically come to data in one of two way: 1) a research assistant enters the data into a spreadsheet type interface, or 2) the data is obtained as the output from computer software (e.g., Qualtrics, SurveyMonkey, Noldus, etc.). Regardless of the approach it is critical to name your variables appropriately. For spreadsheet users, this mean setting of the spreadsheet the data will be recorded in with column names that are amenable to the future analyses you want to conduct. Likewise, for software uses, this means setting up the software prior to running the experiment/survey to that when the data is exported for analysis the column names you obtain are amenable to subsequent analyses approaches. Although failure to take this thoughtful approach in advance can be overcome - it is only overcome with substantial manual effort. Therefore, as noted previously, we strongly encourage you to following the naming conventions we espouse here where you set up your data recording regime. Additionally, we encourage you to give careful thought in advance to the codes you will use to record missing data.
+Data can be collected in a wide variety of way. Regardless of the methods of location researchers typically come to data in one of two way: 1) a research assistant enters the data into a spreadsheet type interface, or 2) the data is obtained as the output from computer software (e.g., Qualtrics, SurveyMonkey, Noldus, etc.).
+
+Regardless of the approach it is critical to name your variables appropriately. For those using software, such as Qualtrics, this means setting up the survey to using appropriate variable names PRIOR to data collection - so the exported file has desirable variable names. For spreadsheet users, this means setting up the spreadsheet the data will be recorded in with column names that are amenable to the future analyses you want to conduct.
+
+Although failure to take this thoughtful approach at the data collection stage can be overcome - it is only overcome with substantial manual effort. Therefore, as noted previously, we strongly encourage you to following the naming conventions we espouse here where you set up your data recording regime. Additionally, we encourage you to give careful thought in advance to the codes you will use to record missing data.
 
 \hypertarget{naming-conventions}{%
 \subsection{Naming conventions}\label{naming-conventions}}
@@ -2460,10 +2466,29 @@ As you read each of these example scripts pay attention to the redundancy. Regar
 
 Also as you follow along on your computer, be sure to used read\_csv when you load data not read.csv (the base R appoach). Also note how in the N-way repeated measures design we were forced to deal with a situation where the research assistant indicated male and female using numbers instead of words when entering the data.
 
+\hypertarget{entering-data-into-spreadsheets}{%
+\section{Entering data into spreadsheets}\label{entering-data-into-spreadsheets}}
+
+The first example uses a data file data\_ex\_between.csv that corresponds to an example where we recorded the run times for a number of male and female participants. How did we create this data file. We used a spreadsheet to enter the data, as illustrated in Figure \ref{fig:spreadsheetbetween}. Programs like Microsoft Excel and Google Sheets are good options for entering data.
+
+\begin{figure}
+\includegraphics[width=0.4\linewidth]{ch_score_items/images/screenshot_data_between} \caption{Spreadsheet entry of running data}\label{fig:spreadsheetbetween}
+\end{figure}
+
+The key to using these types of programs is to the save the data as a .csv file when you are done. CSV is short for Comma Separated Values. After entering the data in Figure \ref{fig:spreadsheetbetween} we saved it as data\_ex\_between.csv. There is no need to do so, but if you were to open this file in a text editor (such as TextEdit on a Mac or Notepad on Windows) you would see the information displayed in Figure \ref{fig:csvsheetbetween}. You can see there is one row per person and the columns are created by separating each values by a comma; hence, comma separated values.
+
+\begin{figure}
+\includegraphics[width=0.25\linewidth]{ch_score_items/images/screenshot_csv_between} \caption{Text view of CSV data}\label{fig:csvsheetbetween}
+\end{figure}
+
+There are many ways to save data, but the CSV data is one of the better ones because it is a non-proprietary format. Some software, such as SPSS, using a proprietary format (e.g., .sav for SPSS) the make it challenging to access that data if you don't have that (often expensive software). One of our goals as scientists is to make it easy for others to audit our work - so that science can be self-correcting. Therefore, choose an open format for your data like .csv.
+
 \hypertarget{experiment-between}{%
 \section{Experiment: Between}\label{experiment-between}}
 
-The between-participant example uses the data file data\_ex\_between.csv. Initial loading of the file, including the specification of missing data codes, is provided by the code below. The data corresponds to a designs where the researcher is interested in comparing run times (elapsed\_time) based on sex (male/female). This type of workflow is appropriate when you have independent groups t-tests and between-particpant ANOVA.
+Ensure your data is in the folder. Start a new script with the name. In that script enter the commands below.
+
+We can load the data\_ex\_between.csv data by creating a script with commands below. As noted previously, these data corresponds to a design where the researcher is interested in comparing run times (elapsed\_time) based on sex (male/female). This section outlines a workflow appropriate for when you plan to conduct independent groups t-tests or a between-particpants ANOVA.
 
 \begin{Shaded}
 \begin{Highlighting}[]
